refactor: god class breakups, antipattern fixes across 55 files
God class extractions (4 classes broken up):
- ArrayUtil → ArrayTypeConverters + ArrayMathUtils (91 delegates)
- ComputationGraph → ComputationGraphRnn (11 RNN methods)
- MultiLayerNetwork → MultiLayerNetworkRnn + MultiLayerNetworkEvaluator
- AbstractSession → SessionExecutionDiagnostics

Antipattern fixes:
- Replace deprecated boxed constructors (new Double/Integer/Float/Long)
- Add serialVersionUID to 19 Serializable classes
- Centralize 11 property string literals into ND4JSystemProperties
- Replace e.printStackTrace() with slf4j logging (8 files)
- Replace System.out.println with slf4j logging (5 files)